# dd-trace-dotnet

./: .EnlistmentRoot.marker  .artifactignore  .clang-format  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .vsconfig  AGENTS.md  BannedSymbols.txt  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  ConsoleDeadlockIssue.md  Datadog.AutoInstrumentation.Profiler.sln  Datadog.Dependabot.Honeypot.csproj  Datadog.Dependeabot.Honeypot.csproj  Datadog.Profiler.sln  Datadog.Trace.Build.g.sln  Datadog.Trace.ClrProfiler.Managed.Loader.csproj  Datadog.Trace.Debugger.slnf  Datadog.Trace.Managed.sln  Datadog.Trace.Managed.sln.DotSettings  Datadog.Trace.Minimal.With.Tests.slnf  Datadog.Trace.Minimal.sln  Datadog.Trace.Minimal.slnf  Datadog.Trace.Native.sln  Datadog.Trace.OSX.sln  Datadog.Trace.OSX.slnf  Datadog.Trace.Samples.g.sln  Datadog.Trace.Security.sln  Datadog.Trace.Security.slnf  Datadog.Trace.TestOptimization.slnf  Datadog.Trace.Tiny.slnx  Datadog.Trace.devcontainer.sln  Datadog.Trace.msbuild  (+86 more)
profiler/: .clang-format  .clang-tidy  CMakeLists.txt  Datadog.AutoInstrumentation.Profiler.sln  Directory.Build.props  Directory.Build.targets  NuGet.config  README.MD  README.md  cppcheck-suppressions.txt  erwan.md  run-scenario.sh  stylecop.json
profiler/docs/: Development.md  MemoryMeasurement.md  NativeHeapReporting.md
profiler/plans/: reference_chain_optimizations_cursor+claude+kiro.plan.md
profiler/src/: GlobalSuppressions.cs
profiler/src/Demos/: Datadog.Demos.sln  Directory.Build.props
profiler/src/ProfilerEngine/: Directory.Build.props  Directory.Build.targets  ProductVersion.props  ubsan_ignorelist.txt
profiler/src/dotnet-runtime-coreclr/: README.md
profiler/test/: CMakeLists.txt  Directory.Build.props  Directory.Build.targets
profiler/test/Datadog.Linux.ApiWrapper.Tests/: CMakeLists.txt  WrappedFunctions.cpp
profiler/test/Datadog.Profiler.IntegrationTests/: ApplicationInfoTest.cs  Datadog.Profiler.IntegrationTests.csproj  GlobalSuppressions.cs  MemoryFootprintTest.cs  MetricsTest.cs  MockDatadogAgent.cs  ProcessTagsTest.cs  TelemetryMetricTest.cs  TimelineTest.cs  xunit.runner.json
profiler/test/Datadog.Profiler.Native.Tests/: AdaptiveSamplerTest.cpp  AppDomainStoreHelper.cpp  AppDomainStoreHelper.h  ApplicationStoreTest.cpp  AutoResetEventTest.cpp  CMakeLists.txt  CallstackPoolTest.cpp  CallstackTest.cpp  CdacDescriptorTest.cpp  CdacGCContractTest.cpp  ChronoHelperTest.cpp  ClrEventsParserTest.cpp  CommittedMemoryProbeTest.cpp  ConfigurationTest.cpp  CpuProfilerTypeTest.cpp  CpuSampleProviderTest.cpp  CrashReportingTest.cpp  DacNativeHeapEnumeratorTest.cpp  Datadog.Profiler.Native.Tests.vcxproj  Datadog.Profiler.Native.Tests.vcxproj.filters  DebugInfoStoreTest.cpp  DiscardMetricsTest.cpp  EEHeapReporterTest.cpp  EEHeapTestHelpers.h  EhFrameParserTest.cpp  EnabledProfilersTest.cpp  EnvironmentHelper.cpp  EnvironmentHelper.h  ErrorCodeTest.cpp  EtwEventsManagerTest.cpp  ExporterTest.cpp  FakeSamples.cpp  FakeSamples.h  FixedSizeAllocatorTest.cpp  FrameStoreHelper.cpp  FrameStoreHelper.h  FrameStoreTest.cpp  HResultConverterTest.cpp  IMetricsSenderFactoryTest.cpp  InProcessMemoryReaderTest.cpp  (+51 more)
profiler/test/Datadog.Profiler.Tests/: Datadog.Profiler.Tests.csproj  ProfiledThreadInfoTests.cs
profiler/test/Datadog.TestProfiler/: CMakeLists.txt  Datadog.TestProfiler.def  Datadog.TestProfiler.vcxproj  Datadog.TestProfiler.vcxproj.filters  Log.h  README.md  TestProfilerCallback.cpp  TestProfilerCallback.h  TestProfilerClassFactory.cpp  TestProfilerClassFactory.h  Validation.cpp  Validation.h  datadog_testprofiler.version  dllmain.cpp
profiler/test/RuntimeMetrics.Tests/: CounterTests.cs  FrameworkProviderTests.cs  Helpers.cs  IncValueTests.cs  (+3 more)
src/Datadog.AutoInstrumentation.NativeLoader/: CMakeLists.txt  Datadog.AutoInstrumentation.NativeLoader.vcxproj  Datadog.AutoInstrumentation.NativeLoader.vcxproj.filters  cor_profiler.cpp  cor_profiler.h  cor_profiler_class_factory.cpp  cor_profiler_class_factory.h  dllmain.cpp  dynamic_dispatcher.cpp  dynamic_dispatcher.h  dynamic_instance.cpp  dynamic_instance.h  loader.conf  pal.cpp  pal.h  string.cpp  util.h
src/Datadog.Trace.ClrProfiler.Native/: AspNetMvc5Integration.cpp  AspNetMvc5Integration.h  CComPtr.h  CLRHelpers.cpp  CLRHelpers.h  CMakeLists.txt  CSHolder.cpp  CSHolder.h  ClassFactory.cpp  ClassFactory.h  ComPtr.h  CorProfiler.cpp  CorProfiler.h  CorProfilerBase.cpp  CorProfilerBase.h  CustomIntegration.cpp  CustomIntegration.h  Datadog.Trace.ClrProfiler.Native.DLL.vcxproj  Datadog.Trace.ClrProfiler.Native.def  Datadog.Trace.ClrProfiler.Native.vcxproj  Datadog.Trace.ClrProfiler.Native.vcxproj.filters  Dockerfile  GlobalIntegrations.h  GlobalTypeReferences.h  IDToInfoMap.h  ILRewriter.cpp  ILRewriter.h  ILRewriterWrapper.cpp  ILRewriterWrapper.h  InstrumentedMethod.h  Integration.cpp  Integration.h  IntegrationBase.cpp  IntegrationBase.h  IntegrationLoader.cpp  IntegrationLoader.h  IntegrationType.h  Interop.cpp  Macros.h  Makefile  (+81 more)
tracer/: CMakeLists.txt  Datadog.Trace.proj  Directory.Build.props  Directory.Build.targets  GlobalSuppressions.cs  README.MD  README.md  build.ps1  build.sh  build_in_docker.ps1  build_in_docker.sh  createZip.sh  dashboard-dotnet-otlp-runtime-metrics.json  integrations.json  missing-nullability-files.csv  nuke-targets.md  output.txt  profiler-run.sh  stylecop.json  vcpkg.json
tracer/dependabot/: Datadog.Dependabot.Integrations.csproj  Datadog.Dependabot.Vendors.csproj  generated_calltargets.g.json
tracer/samples/: samples.sln
tracer/src/: .editorconfig  BannedSymbols.txt  Common.props  Directory.Build.props  Directory.Build.targets  GlobalSuppressions.cs
tracer/test/: .editorconfig  CMakeLists.txt  Directory.Build.props  GlobalSuppressions.cs  MigrationHelper.md  test.settings
tracer/tools/: AzureDevOpsHelpers.psm1  Build-AzureFunctionsNuget.ps1  Deploy-AzureFunction.ps1  Directory.Build.props  Get-AzureDevOpsBuildAnalysis.ps1  Get-AzureFunctionLogs.ps1  Get-DatadogLogs.ps1  Get-DatadogTrace.ps1  Retry-AzureDevOpsFailedStages.ps1
(+25435 files in other folders)
